src/test/deca/context/invalid/cast-impossible.context
cast-impossible.deca:15:
